mockers_derive/tests/compile-fail/lifetime_params.rs
use mockers_derive::mocked;

#[mocked]
trait A: 'static {
}

fn main() {}
