mockers_derive/tests/compile-fail/lifetime_params.stderr
error: lifetime bounds aren't supported yet
 --> $DIR/lifetime_params.rs:4:10
  |
4 | trait A: 'static {
  |          ^^^^^^^
